# weather_canada_downloader

./: .gitignore  README.md  _column_config.py  combiner.py  download_bc_data.py  downloader.py  main.py  pyproject.toml  run.py  setup.py  station_id.csv  station_id.txt  station_inventory_reader.py
.github/workflows/: pylint.yml  pytest.yml
data/: Station Inventory EN.csv
docs/: Command_Lines_EN.txt  Station_Inventory_ID_Disclaimer_Metadata_EN.txt
tests/: test_downloader.py  test_station_inventory_reader.py
