[project]
name = "canada-weather-downloader"
version = "0.1.0"
description = "A Python package to download historical weather data for Canadian cities."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pandas>=3.0.3",
    "pyarrow>=24.0.0",
    "requests>=2.34.2",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
