[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "canada-weather-downloader"
version = "0.1.0"
description = "A Python package to download historical weather data for Canadian cities."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pandas>=2.0",
    "pyarrow>=10.0",
    "requests>=2.25",
    "tqdm>=4.60",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]
