[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "canada-weather-downloader"
version = "0.1.0"
description = "A Python package to download historical weather data for Canadian cities."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pandas>=2.0",
    "pyarrow>=10.0",
    "requests>=2.25",
    "tqdm>=4.60",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]

[tool.setuptools]
py-modules = ["downloader", "station_inventory_reader", "_column_config"]
